force-app/main/default/objects/MUSW__Application_Contact__c/MUSW__Application_Contact__c.object-meta.xml
<CustomObject>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>