force-app/main/default/objects/MUSW__Application_Contact__c/fields/MUSW__Business_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Business_Mailing_Address__c</fullName>
    <label>Business Mailing Address</label>
    <type>Address</type>
</CustomField>