force-app/main/default/objects/MUSW__Application_Contact__c/fields/MUSW__Contractor_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contractor_Type__c</fullName>
    <label>Contractor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Contractor_Types</valueSetName>
    </valueSet>
</CustomField>