force-app/main/default/objects/MUSW__Application_Contact__c/fields/MUSW__First_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>