force-app/main/default/objects/MUSW__Application_Contact__c/fields/MUSW__Relationship__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Relationship_Types</valueSetName>
    </valueSet>
</CustomField>